Fixed some spacing issues on the Recordings page.

--- a/_themes/tm3/css/recordings.css
+++ b/_themes/tm3/css/recordings.css
@@ -33,7 +33,7 @@
     font-size: 80%;
     height: auto;
     margin: 0;
-    padding: 0 10px 0 0;
+    padding: 0;
     position: relative;
     vertical-align: top;
     width: 100%;
